--- a/composer.json
+++ b/composer.json
@@ -29,13 +29,10 @@
         "php": ">=5.4.0",
         "illuminate/support": "5.*",
         "illuminate/config": "5.*",
-        "symfony/finder": "~2.7",
-        "Vinelab/http": "1.2.*"
+        "symfony/finder": "4.*",
+        "Vinelab/http": "1.5.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.3.*",
-        "mockery/mockery": "0.9.*",
-        "symfony/var-dumper": "~2.6"
     },
     "autoload": {
         "psr-4": {
