--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "5.*",
-        "illuminate/config": "5.*",
-        "symfony/finder": "4.*",
-        "Vinelab/http": "1.5.*"
+        "illuminate/support": "*",
+        "illuminate/config": "*",
+        "symfony/finder": "*",
+        "Vinelab/http": "*"
     },
     "require-dev": {
     },
